--- a/index.html
+++ b/index.html
@@ -1,3 +1,13 @@
-<html>
-    <h1>website</h1>
-</html>
+<HTML>
+<!DOCTYPE HTML>
+    <head>
+        <meta charset="utf-8"/>
+        <link href="dashboard.css" type="text/css" rel="stylesheet" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>SPACEX dashboard</title>
+    </head>
+    
+    <body>
+        <h1>Hello world</h1>
+    </body>
+</HTML>
