--- a/index.html
+++ b/index.html
@@ -8,6 +8,15 @@
     </head>
     
     <body>
-        <h1>Hello world</h1>
+        <main>
+            <section class="glass">
+                <div class="dashboard">
+                    <div class="passenger">
+                            <!--<img class="profile"src="./images/rosa.JPG">-->
+                            <h3>Rosa van den Heuvel</h3>
+                            <p>Passenger 15102246</p>
+                </div>
+            </section>
+        </main>
     </body>
 </HTML>
