--- a/index2.html
+++ b/index2.html
@@ -2,7 +2,7 @@
 <!DOCTYPE HTML>
     <head>
         <meta charset="utf-8" />
-        <link href="dashboard2.css" type="text/css" rel="stylesheet" />
+        <link href="dashboard.css" type="text/css" rel="stylesheet" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>SPACEX dashboard</title>
     </head>
