--- a/challenge2.html
+++ b/challenge2.html
@@ -15,22 +15,35 @@
             </div>
         </div>
 
-        <!-- Onderste gedeelte met data -->
-        <div class="lowerSection">
-            <div class="gegevens"> 
-                <p>Dag : </p>
-                <div id="day"></div>
+        <div class="gridContainer">
+            <div class="grid-item glass">
+                <div class="1">
+                    <p class="left">Dag : </p>
+                    <div class="right" id="day"></div>   
+                </div>
+            </div>
 
+            <div class="grid-item glass">
+                <div class="2">
+                    <p class="left">Maand :</p>
+                    <div class="right" id="month"></div>   
+                </div>
+            </div>
+
+            <div class="grid-item glass">
+                <div class="3">
+                    <p class="left">Year :</p>
+                    <div class="right" id="year"></div>   
+                </div>
+            </div>
+
+            <div class="grid-item glass">
+                <div class="4">
+                    <p class="left">Tijdzone :</p>
+                    <p class="right" id="timezone">Central European Time</p>   
+                </div>
             </div>
         </div>
-            
-            <!-- <div id="clock"></div>
-                <main class="container">
-                <div class="glass" id="day">Tijd</div>
-                <div class="glass" id="month"></div>
-                <div class="glass" id="year"></div> 
-                <div class="glass" id="timezone">Tijdzone plaatsen</div>
-                </main> -->
 
     </body>
 </html>
